seat.yaml add to swagger.json
